adjusted start questions and styled to avoid small layout shift on scroll

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,4 +1,9 @@
 @use '../abstracts/variables' as vars;
 
+html {
+  overflow-y: scroll;
+}
 
-.hidden { display: none; }
+.hidden {
+  display: none;
+}
